--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <h1 class="section-one-header">
             Effective Solutions for Your Business
           </h1>
-          <button class="section-one-button" type="button">
+          <button class="button section-one-button" type="button">
             Order Service
           </button>
         </div>
@@ -464,6 +464,33 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe-container">
+          <p class="footer-text media-text">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label" for="email"></label>
+            <input
+              type="email"
+              class="footer-input"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+            />
+          </form>
+          <div class="button-container">
+            <button type="button" class="button footer-button">
+              Subscribe
+              <a href="" class="icon-link footer-button-icon-link">
+                <svg
+                  class="icon-icon footer-button-icon-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-telegram"></use>
+                </svg>
+              </a>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
