--- a/index.html
+++ b/index.html
@@ -468,14 +468,15 @@
         <div class="subscribe-container">
           <p class="footer-text media-text">Subscribe</p>
           <form class="footer-form">
-            <label class="footer-form-label" for="email"></label>
-            <input
-              type="email"
-              class="footer-input"
-              name="email"
-              id="email"
-              placeholder="E-mail"
-            />
+            <label class="footer-form-label" for="email">
+              <input
+                type="email"
+                class="footer-input"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+              />
+            </label>
           </form>
           <div class="button-container">
             <button type="button" class="button footer-button">
