--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             </label>
           
           <div class="button-container">
-            <button type="button" class="button footer-button">
+            <button type="submit" class="button footer-button">
               Subscribe
               <a href="" class="icon-link footer-button-icon-link">
                 <svg
