--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </section>
       <section class="section-two">
         <div class="container">
-          <h2 hidden class="section-two-header">Benefits</h2>
+          <h2 class="section-two-header visually-hidden">Benefits</h2>
           <ul class="section-two-list">
             <li class="section-two-item">
               <div class="container-icons">
@@ -491,5 +491,13 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <svg class="backdrop-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+        </svg>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+      </div>
+    </div>
   </body>
 </html>
