--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     </footer>
     <div class="backdrop is-open">
       <div class="modal">
-        <button class="modal-close-btn">
+        <button class="modal-close-btn" type="button">
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -501,10 +501,15 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form name="modal-form">
           <div class="modal-field">
-            <label class="modal-label" for="name"> Name</label>
+            <label class="modal-label" for="user-name"> Name</label>
             <div class="modal-field-wrap">
-              <input type="text" class="form-input" name="name" id="name" />
-              <svg class="modal-field-icon" width="12" height="12">
+              <input
+                type="text"
+                class="form-input"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -513,7 +518,7 @@
             <label class="modal-label" for="tel">Phone</label>
             <div class="modal-field-wrap">
               <input type="tel" class="form-input" name="tel" id="tel" />
-              <svg class="modal-field-icon" width="12" height="12">
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -522,25 +527,26 @@
             <label class="modal-label" for="email">Email</label>
             <div class="modal-field-wrap">
               <input type="email" class="form-input" name="email" id="email" />
-              <svg class="modal-field-icon" width="12" height="12">
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
           <div class="modal-field">
-            <label class="modal-label" for="comment">Comment </label>
+            <label class="modal-label" for="user-comment">Comment </label>
             <textarea
               class="form-input textarea-input"
-              id="comment"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
           <div class="modal-field">
-            <input type="checkbox" name="terms" id="terms" />
-            <label class="modal-label" for="terms"
+            <label class="modal-label" for="user-privacy"
               >I accept the terms and conditions of the
-              <span class="privacy">Privacy Policy</span></label
-            >
+              <span class="privacy">Privacy Policy</span>
+              <input type="checkbox" name="user-privacy" id="user-privacy" />
+            </label>
           </div>
         </form>
         <button class="button modal-btn" type="submit">Order Service</button>
