--- a/index.html
+++ b/index.html
@@ -542,10 +542,16 @@
             ></textarea>
           </div>
           <div class="modal-field">
+            <input
+              class="form-input visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
             <label class="modal-label" for="user-privacy"
               >I accept the terms and conditions of the
               <span class="privacy">Privacy Policy</span>
-              <input type="checkbox" name="user-privacy" id="user-privacy" />
             </label>
           </div>
         </form>
