--- a/index.html
+++ b/index.html
@@ -551,7 +551,12 @@
             />
             <label class="modal-label" for="user-privacy"
               >I accept the terms and conditions of the
-              <span class="privacy">Privacy Policy</span>
+              <span class="privacy"
+                >Privacy Policy
+                <svg class="modal-field-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
             </label>
           </div>
         </form>
