--- a/index.html
+++ b/index.html
@@ -543,24 +543,25 @@
           </div>
           <div class="modal-field">
             <input
-              class="form-input visually-hidden"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
               value="true"
+              class="modal-check visually-hidden"
             />
+
             <label class="modal-label" for="user-privacy"
-              >I accept the terms and conditions of the
-              <span class="privacy"
-                >Privacy Policy
-                <svg class="modal-field-icon" width="10" height="8">
+              ><span class="fake-check">
+                <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
+              I accept the terms and conditions of the
+              <span class="privacy">Privacy Policy </span>
             </label>
           </div>
         </form>
-        <button class="button modal-btn" type="submit">Order Service</button>
+        <button class="button modal-btn" type="submit">Send</button>
       </div>
     </div>
   </body>
