--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <span class="privacy">Privacy Policy </span>
+              <a href="" class="privacy">Privacy Policy </a>
             </label>
           </div>
         </form>
