--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
               class="modal-check visually-hidden"
             />
 
-            <label class="modal-label" for="user-privacy"
+            <label class="modal-label-checkbox" for="user-privacy"
               ><span class="fake-check">
                 <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
