--- a/index.html
+++ b/index.html
@@ -524,15 +524,15 @@
             </div>
           </div>
           <div class="modal-field">
-            <label class="modal-label" for="email">Email</label>
+            <label class="modal-label" for="e-mail">Email</label>
             <div class="modal-field-wrap">
-              <input type="email" class="form-input" name="email" id="email" />
+              <input type="email" class="form-input" name="email" id="e-mail" />
               <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-field modal-field-margin">
             <label class="modal-label" for="user-comment">Comment </label>
             <textarea
               class="form-input textarea-input"
@@ -541,7 +541,7 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-field">
+          <div class="modal-field modal-field-checkbox">
             <input
               type="checkbox"
               name="user-privacy"
