--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
           <h1 class="section-one-header">
             Effective Solutions for Your Business
           </h1>
-          <button class="button section-one-button" type="button">
+          <button
+            class="button section-one-button"
+            type="button"
+            data-modal-open
+          >
             Order Service
           </button>
         </div>
@@ -491,9 +495,9 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop" data-modal>
       <div class="modal">
-        <button class="modal-close-btn" type="button">
+        <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -564,5 +568,7 @@
         </form>
       </div>
     </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
